# HW7_PW_SQLAlchemy

./: README.md  alembic.ini  connect_dp.py  models.py  my_select.py  pyproject.toml  seeds.py  university.sql
