[tool.poetry]
name = "hwm7"
version = "0.1.0"
description = ""
authors = ["LevytskyiS <levytskyi.sv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
